scaffold/typescript-go-main/testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/getJavaScriptSyntacticDiagnostics8.baseline
// === Syntax and Semantic Diagnostics ===
/a.js(1,6): error TS8008: Type aliases can only be used in TypeScript files.


==== /a.js (1 errors) ====
    type a = b;
         ~
!!! error TS8008: Type aliases can only be used in TypeScript files.